<resources>
    <string name="app_name">RandomMoviePicker</string>
    <string name="moviepicker">MoviePicker</string>
    <string name="pick_a_movie">Pick a Movie</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="log_in">Log In</string>
    <string name="title_here">Title Here</string>
    <string name="genres_go_here">Genres, Go, Here</string>
    <string name="released_20xx">Released: 20XX</string>
    <string name="rated_g">Rated: G</string>
    <string name="xx_min">XX min</string>
    <string name="director_name_here">Director: Name Here</string>
    <string name="actors">Actors:</string>
    <string name="actor_one_actor_two">Actor One, Actor Two, ...</string>
    <string name="description">Description</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="trailer">Trailer</string>
    <string name="streaming_service_button">Streaming Service Button</string>
    <string name="image_of_movie_poster">Image of Movie Poster</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="filters">Filters</string>
    <string name="star_rating">Star Rating</string>
    <string name="dash">-</string>
    <string name="year_released">Year Released</string>
    <string name="from">From</string>
    <string name="comedy">Comedy</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="supernatural">Supernatural</string>
    <string name="feel_good">Feel Good</string>
    <string name="western">Western</string>
    <string name="foreign">Foreign</string>
    <string name="action">Action</string>
    <string name="drama">Drama</string>
    <string name="animated">Animated</string>
    <string name="thriller">Thriller</string>
    <string name="fantasy">Fantasy</string>
    <string name="adventure">Adventure</string>
    <string name="romance">Romance</string>
    <string name="documentary">Documentary</string>
    <string name="crime">Crime</string>
    <string name="horror">Horror</string>
    <string name="family">Family</string>
    <string name="sports">Sports</string>
    <string name="mystery">Mystery</string>
    <string name="classic">Classic</string>
    <string name="search">Search</string>
    <string name="ex_vampire">ex. vampire</string>
    <string name="keyword">Keyword</string>
    <string name="ex_tom_hanks">ex. Tom Hanks</string>
    <string name="ex_pg_13">ex. PG-13</string>
    <string name="maturity_rating">Maturity Rating</string>
    <string name="_1970">1970</string>
    <string name="_2021">2021</string>
    <string name="to">To</string>
    <string name="random">Random</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>