<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    android:padding="10dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:padding="20dp"
                android:id="@+id/avail_ss"
                android:src="@drawable/disney_button"
                android:contentDescription="@string/streaming_service_button"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="480dp"
                android:id="@+id/movie_poster"
                android:padding="20dp"
                android:layout_below="@id/avail_ss"
                android:src="@drawable/default_poster"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/image_of_movie_poster"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/movie_poster"
                android:id="@+id/movie_title"
                android:text="@string/title_here"
                android:textSize="50sp"
                android:textAlignment="center"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movie_genres"
                android:text="@string/genres_go_here"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/movie_title"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/release_year_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_below="@id/movie_genres"
                android:layout_alignParentStart="true"
                android:paddingHorizontal="20dp"
                android:text="@string/released_20xx"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movie_length_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_below="@id/movie_genres"
                android:layout_alignParentEnd="true"
                android:paddingHorizontal="20dp"
                android:text="@string/xx_min"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/maturity_rating_text"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_below="@id/release_year_text"
                android:text="@string/rated_g"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"/>
            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"

                android:layout_below="@id/movie_length_text"
                android:src="@drawable/ic_baseline_favorite_24"
                android:background="@color/background_color"
                android:layout_alignParentEnd="true"
                android:layout_margin="30dp"
                android:id="@+id/fav_button"
                android:contentDescription="@string/favorite_button"
                />
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/maturity_rating_text"
                android:numStars="5"
                android:stepSize="0.1"
                android:progressTint="@color/star_color"
                android:secondaryProgressTint="@color/star_color"
                android:isIndicator="true"
                android:id="@+id/star_rating_bar"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_below="@id/star_rating_bar"
                android:layout_alignParentStart="true"
                android:paddingHorizontal="20dp"
                android:text="@string/director_name_here"
                android:paddingVertical="15dp"
                android:id="@+id/director_text"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/director_text"
                android:layout_alignParentStart="true"
                android:textColor="@color/white"
                android:text="@string/actors"
                android:id="@+id/actor_label"
                android:textSize="18sp"
                android:paddingHorizontal="20dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/actor_label"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp"
                android:text="@string/actor_one_actor_two"
                android:id="@+id/actor_text"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/desc_label"
                android:textSize="30sp"
                android:text="@string/description"
                android:textColor="@color/white"
                android:layout_below="@id/actor_text"
                android:layout_alignParentStart="true"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/desc_label"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp"
                android:text="@string/lorem_ipsum"
                android:id="@+id/desc_text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/trailer_label"
                android:textSize="30sp"
                android:text="@string/trailer"
                android:textColor="@color/white"
                android:layout_below="@id/desc_text"
                android:layout_alignParentStart="true"
                android:paddingHorizontal="20dp"
                android:paddingVertical="20dp"
                />
            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/trailer_label"
                android:layout_centerHorizontal="true"
                android:padding="20dp"
                app:autoPlay="false"
                app:showFullScreenButton="true"
                android:id="@+id/trailer_view"/>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>